Fix middle double border bug

--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ table {
   font-size:9px;
 }
 .push_mid{
-  margin-left:46px;
+  margin-left:44px;
 }
 .videobox{
    padding-left:15px;
